--- a/index.html
+++ b/index.html
@@ -3,14 +3,17 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
-  <title>Mars-代理系统</title>
-  <meta name="keywords" content="高顿会计从业教育,地域名,高顿会计继续教育,会计继续教育,会计在线课程培训,会计从业培训,会计从业课程,高顿会计从业">
+  <title>VIP CPA</title>
+  <meta name="keywords" content="高顿学员自习室">
   <meta name="description" content="">
-  <meta name="author" content="think">
   <script type="text/javascript" src="//s.gaodun.com/web/scripts/core/polyfill.min.js"></script>
   <script src='http://static.polyv.net/file/polyvplayer_v2.0.min.js'></script>
-<link href="dist/vendor.67986056199801e6d6b5.css" rel="stylesheet"></head>
+  <script src='//localhost:8080/vipcpa/react.production.min.js'></script>
+  <script src='//localhost:8080/vipcpa/react-router-dom.min.js'></script>
+  <script src='//localhost:8080/vipcpa/react-dom.production.min.js'></script>
+
+<link href="dist/vendor.8119e28b1148070273d5.css" rel="stylesheet"></head>
 <body>
   <div class="root" id="root"></div>
-<script type="text/javascript" src="dist/vendor.67986056199801e6d6b5.bundle.js"></script><script type="text/javascript" src="dist/vendor.67986056199801e6d6b5.js"></script><script type="text/javascript" src="dist/index.67986056199801e6d6b5.js"></script></body>
+<script type="text/javascript" src="dist/vendor.8119e28b1148070273d5.bundle.js"></script><script type="text/javascript" src="dist/vendor.8119e28b1148070273d5.js"></script><script type="text/javascript" src="dist/index.8119e28b1148070273d5.js"></script></body>
 </html>
