--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,10 @@
   <meta name="description" content="">
   <script type="text/javascript" src="//s.gaodun.com/web/scripts/core/polyfill.min.js"></script>
   <script src='http://static.polyv.net/file/polyvplayer_v2.0.min.js'></script>
+  <script src='//localhost:8080/vipcpa/react.production.min.js'></script>
+  <script src='//localhost:8080/vipcpa/react-router-dom.min.js'></script>
+  <script src='//localhost:8080/vipcpa/react-dom.production.min.js'></script>
+
 </head>
 <body>
   <div class="root" id="root"></div>
