--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
   <script src='//localhost:8080/vipcpa/react.production.min.js'></script>
   <script src='//localhost:8080/vipcpa/react-router-dom.min.js'></script>
   <script src='//localhost:8080/vipcpa/react-dom.production.min.js'></script>
+  <script src='//localhost:8080/vipcpa/antd-mobile.min.js'></script>
 
 </head>
 <body>
