--- a/app/index.html
+++ b/app/index.html
@@ -7,12 +7,13 @@
   <meta name="keywords" content="高顿学员自习室">
   <meta name="description" content="">
   <script type="text/javascript" src="//s.gaodun.com/web/scripts/core/polyfill.min.js"></script>
-  <script src='http://static.polyv.net/file/polyvplayer_v2.0.min.js'></script>
+  <script src='//static.polyv.net/file/polyvplayer_v2.0.min.js'></script>
   <script src='//localhost:8080/vipcpa/react.production.min.js'></script>
   <script src='//localhost:8080/vipcpa/react-router-dom.min.js'></script>
   <script src='//localhost:8080/vipcpa/react-dom.production.min.js'></script>
   <script src='//localhost:8080/vipcpa/antd-mobile.min.js'></script>
-
+  <script src="//glive.gaodun.com/3rd/jquery1.9.min.js"></script>
+  <script src="//view.csslcloud.net/js/liveSDK.js"></script>
 </head>
 <body>
   <div class="root" id="root"></div>
