--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
   <meta name="keywords" content="高顿学员自习室">
   <meta name="description" content="">
   <script type="text/javascript" src="//s.gaodun.com/web/scripts/core/polyfill.min.js"></script>
-  <script src='http://static.polyv.net/file/polyvplayer_v2.0.min.js'></script>
+  <script src='//static.polyv.net/file/polyvplayer_v2.0.min.js'></script>
   <script src='//localhost:8080/vipcpa/react.production.min.js'></script>
   <script src='//localhost:8080/vipcpa/react-router-dom.min.js'></script>
   <script src='//localhost:8080/vipcpa/react-dom.production.min.js'></script>
+  <script src='//localhost:8080/vipcpa/antd-mobile.min.js'></script>
+  <script src="//glive.gaodun.com/3rd/jquery1.9.min.js"></script>
+  <script src="//view.csslcloud.net/js/liveSDK.js"></script>
 
-<link href="dist/vendor.8119e28b1148070273d5.css" rel="stylesheet"></head>
+<link href="dist/vendor.419e80b9e8bd699f0015.css" rel="stylesheet"></head>
 <body>
   <div class="root" id="root"></div>
-<script type="text/javascript" src="dist/vendor.8119e28b1148070273d5.bundle.js"></script><script type="text/javascript" src="dist/vendor.8119e28b1148070273d5.js"></script><script type="text/javascript" src="dist/index.8119e28b1148070273d5.js"></script></body>
+<script type="text/javascript" src="dist/vendor.419e80b9e8bd699f0015.bundle.js"></script><script type="text/javascript" src="dist/vendor.419e80b9e8bd699f0015.js"></script><script type="text/javascript" src="dist/index.419e80b9e8bd699f0015.js"></script></body>
 </html>
